--- a/package.json
+++ b/package.json
@@ -25,7 +25,18 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
     "react-navigation-tabs": "^2.7.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "react-redux": "^7.1.0",
+    "reactotron-react-native": "^3.6.4",
+    "reactotron-redux": "^3.1.1",
+    "reactotron-redux-saga": "^4.2.2",
+    "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^1.0.5",
+    "@react-native-community/async-storage": "^1.6.1",
+    "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.4",
+    "immer": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
