--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "clr": "cd android && ./gradlew clean && cd ../"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "^5.0.5",
+    "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.4",
+    "immer": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -24,8 +28,8 @@
     "react-native-screens": "^2.0.0-beta.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.1.1",
+    "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
-    "styled-components": "^5.0.1",
     "react-redux": "^7.1.0",
     "reactotron-react-native": "^3.6.4",
     "reactotron-redux": "^3.1.1",
@@ -33,10 +37,7 @@
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.5",
-    "@react-native-community/async-storage": "^1.6.1",
-    "axios": "^0.19.0",
-    "date-fns": "^2.0.0-beta.4",
-    "immer": "^3.2.0"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
